# metaflags

./: CMakeLists.txt  clang-format.sh
cmake/: hana.cmake
inc/metaflags/: metaflags.hpp
tests/: CMakeLists.txt  msgbox.cpp  tests.cpp
